fixed contrast issues

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -15,6 +15,14 @@
         margin-right: 1rem;
         justify-content: right;
     }
+
+    .navigation a {
+        border: none;
+    }
+
+    .navigation a:first-child {
+        border: none;
+    }
     
     .list-row {
         grid-template-columns: 1fr 1fr 1fr 1fr;
